Fix the alignment of the item in the right table of contents

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -234,7 +234,8 @@ Style overrides: Right sidebar, items of the table of content */
 .right-sidebar-panel starlight-toc ul li[class^=astro-] a {
   border-radius: 0%;
   display: inline-block;
-  padding: .5rem 1.1rem;
+  padding-top: .5rem;
+  padding-bottom: .3rem;
   text-decoration: none;
   width: fit-content;
   border-left: 2px solid var(--sl-color-gray-5);
